# lingqiao-src

./: .gitignore  AGENTS.md  AutoExam.no-dry-run.js  AutoExam_silent.js  CMakeLists.txt  README.md  V8_Signature_Research_Report.md  build.bat  reasonix.toml
.github/workflows/: release.yml
cef/include/net/base/: net_error_list.h
docs/: cef-v8-diagnostics-roadmap.md  cef-v8-diagnostics-roadmap.zh-CN.md  client-operation-guide.md
docs/agents/: domain.md
docs/superpowers/plans/: 2026-05-29-server-restructure.md  2026-06-06-admin-frontend-completion.md  2026-06-06-lingqiao-business-services-phase2-batch2.md  2026-06-06-lingqiao-business-services-phase2-batch3.md  2026-06-06-lingqiao-business-services-phase2-batch4.md  2026-06-06-lingqiao-business-services-phase2-batch5.md  2026-06-06-lingqiao-business-services-phase2-batch6.md  2026-06-06-lingqiao-business-services-phase2.md  2026-06-06-lingqiao-platform-foundation.md  2026-06-07-admin-resource-center.md  2026-06-07-manual-renderer-inject.md  2026-06-07-v8-signature-diagnostics.md  2026-06-07-versioned-js-module.md
docs/superpowers/specs/: 2026-05-29-lingqiao-v3-full-restructure-design.md  2026-06-06-lingqiao-platform-upgrade-design.md  2026-06-07-manual-renderer-inject-design.md
injector-server/: .env.example  README.md  admin.go  admin_cards.go  admin_chat.go  admin_handler_test.go  admin_helpers.go  admin_manage.go  admin_ops_test.go  admin_overview.go  admin_security_test.go  agent.go  agent_admin.go  agent_audit_test.go  announcement.go  announcement_test.go  auth.go  auth_test.go  card.go  card_extra.go  card_helpers.go  card_ops.go  card_test.go  card_types.go  chat.go  chat_test.go  dll_download_test.go  go.mod  handler.go  httputil.go  main.go  middleware.go  middleware_test.go  payload.go  payload_handlers.go  payload_test.go  release_api_test.go  release_handlers.go  release_service.go  release_system.go  (+9 more)
injector-server/admin/static/js/: app.js
injector-server/agent/static/js/: app.js
injector-server/internal/agents/: accounts.go  accounts_test.go  invites.go  invites_test.go
injector-server/internal/audit/: audit.go  audit_test.go
injector-server/internal/auth/: session.go  session_test.go
injector-server/internal/cards/: bulk.go  bulk_test.go  errors.go  lifecycle.go  lifecycle_test.go  session.go  session_test.go
injector-server/internal/config/: config.go  config_test.go
injector-server/internal/httpapi/: response.go  response_test.go
injector-server/internal/releases/: models.go  selector.go  service_test.go  signer.go  store.go
injector-server/internal/storage/: storage.go  storage_test.go
injector-server/internal/updates/: metadata.go  metadata_test.go
injector-server/web/: package-lock.json  package.json  tsconfig.json  vite.config.js
injector-server/web-dist/admin/: index.html
injector-server/web-dist/agent/: index.html
injector-server/web-dist/assets/: admin-DwnvcWHL.js  admin-wXej3TNl.js  agent-BpDwOiY2.js  agent-bbi-FedO.js  toast-2ra-ewlg.css  toast-BJOC9eyI.css  toast-CzfuwFKn.js
injector-server/web/admin/: index.html
injector-server/web/admin/src/: main.ts
injector-server/web/agent/: index.html
injector-server/web/agent/src/: main.ts
injector-server/web/shared/src/: api.ts  dom.ts  shell.ts  styles.css  toast.ts
installer/: Bundle.wxs  Product.wxs  README.md  build_installer.ps1  build_portable_setup.ps1
scripts/: autoexam_clipboard_fallback_regression_test.ps1  autoexam_cursor_feedback_loading_regression_test.ps1  autoexam_cursor_feedback_persistence_regression_test.ps1  autoexam_multimodal_provider_regression_test.ps1  autoexam_tab_cursor_state_regression_test.ps1  autoexam_type_detection_regression_test.ps1  build_and_push.ps1  client_ui_regression_test.ps1  download_minhook.ps1  embed_dll.ps1  encrypt_strings.ps1  gen_padding.ps1  generate_encrypted_header.ps1  obfuscate_build.ps1  pack_exe.ps1  pack_payload.ps1  protect_exe.ps1
server/: admin.go  agent.go  auth.go  auth_test.go  card.go  card_test.go  config.go  go.mod  handler.go  httputil.go  main.go  middleware.go  payload.go  storage.go  update.go
server/admin/: index.html
server/admin/static/css/: style.css
server/agent/: index.html
server/agent/static/css/: style.css
src/: CMakeLists.txt  antidebug.h  config.h  crypto.h  dll_extractor.h  dllmain.cpp  hook_engine.c  http_client.h  injector_qt.cpp  machine_fp.h  manual_dll_injector_gui.cpp  manual_injector_core_test.cpp  obfuscate.h  process_identity.cpp  process_identity_test.cpp  script_loader.h  security_regression_test.cpp  strcrypt.h  thread.cpp  v8_hooks.h  version.rc  version.rc.in  workers.h  聊天室升级计划.md
src/core/: config.h  crypto.h  obfuscate.h  pch.cpp  pch.h
src/hook/: dllmain.cpp  hook_engine.c  hook_engine.h  hook_safety.h  pattern_scan.cpp  pattern_scan.h  process_identity.h  script_loader.h  thread.cpp  v8_hooks.cpp  v8_signatures.cpp  v8_signatures.h
src/injector/: manual_dll_injector.cpp  manual_injector_core.cpp  manual_injector_core.h
src/network/: http_client.h  workers.h
src/security/: antidebug.h  dll_extractor.h  machine_fp.h
src/test/: pattern_scan_test.cpp  update_url_test.cpp
src/ui/: animated_button.h  impl_actions.h  impl_builder.h  impl_chat.h  impl_network.h  impl_session.h  impl_update.h  inline_status.h  main_window.h  theme.h  title_bar.h  ui_builder_impl.h  ui_resources.qrc  update_controller_impl.h  update_url.h
